--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <img src="asset/imgs/silder banner.jpg" class="d-block w-100 object-fit-cover" alt="Slide 1" />
             
             <!-- Text Overlay -->
-            <div class="carousel-caption d-none d-md-block text-start  slider-over    shadow qm-caption-box"  >
+            <div class="carousel-caption  text-start  slider-over    shadow qm-caption-box"  >
               <h3 class="fw-bold head-color mb-3">AI Digital Centre Unveils Gazan Students Robotics</h3>
               <p class="text-color">
                 Qatar Museums has recently signed twomemorans of understanding (MoU) with the Capital Museum of China and with the National Museum of Mongolia. Both MoUs were signed by Sheikh Abdulaziz Al Thani, Director of National Museum of Qatar, on behalf of
