fix half canvas height

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <body>
   <section class="canvas">
-    <a id="startbtn" class="btn">
+    <a id="startbtn" class="btn bg-main bg-main-hover text-white ">
       <i class="bi bi-balloon-fill"></i>
-        <br>
+
         Start
     </a>
         <canvas id="birthday"></canvas>
@@ -660,7 +660,7 @@
                         <a href="#" class="carousel-item active position-relative">
                           <img src="https://i.pinimg.com/736x/c1/bf/5e/c1bf5e3bfc560a4fcfe7faa1de1aa478.jpg" class="d-block w-100" alt="Collection 1">
                           <div class="overlay-hover">
-                            <div class="d-flex justify-content-betweenalign-items-center">
+                            <div class="d-flex justify-content-between align-items-center">
                               <h6 class="text-white fw-bold mb-1">The Cultural Experience: Visiting the Museum of Islamic Art</h6>
                         
                               <small class="text-white"><i class="bi bi-eye main-color"></i> 2330</small>
