news page fix issues

--- a/news.html
+++ b/news.html
@@ -310,11 +310,11 @@
     <!-- Example repeated card -->
     <div class="news-item ">
       <div class="card card-color p-2 h-100 card-color">
-        <img src="https://i.pinimg.com/736x/d1/3c/c2/d13cc204417cca190795a789364fcd91.jpg" class="img-fluid rounded" alt="News Image">
+        <img src="https://i.pinimg.com/736x/80/3e/88/803e88e33916f743ccc6a2f45e3d3fdf.jpg" class="img-fluid rounded" alt="News Image">
         <div class="p-2 flex-grow-1">
           <h5 class="fw-bold">AI Digital Centre Unveils Gazan Students Robotics &Technology Project </h5>
           <p class="small">Qatar Museums has recently signed two memorandums of understanding (MoU) with the Capital Museum of China and with the National Museum of Mongolia. Both MoUs were signed by Sheikh Abdulaziz Al Thani, Director of National Museum o.</p>
-          <div class="d-flex justify-content-between align-items-center border-top">
+          <div class=" d-flex justify-content-between align-items-center border-top flex-wrap">
             <div class="text-end mt-2">
               <a href="#" class="btn-main-link  fw-bold">Read More <i class="bi bi-arrow-right"></i></a>
             
@@ -351,10 +351,10 @@
       </div>
       
     </div>
-      <!-- Repeat cards -->
+      <!-- 3 cards -->
       <div class="news-item ">
         <div class="card card-color p-2 h-100 card-color">
-          <img src="https://i.pinimg.com/736x/2d/90/73/2d9073f3f89fe455cf3dad7ae7f578f4.jpg" class="img-fluid rounded" alt="News Image">
+          <img src="https://i.pinimg.com/736x/98/11/50/981150ab571bbbebae42380cfee07150.jpg" class="img-fluid rounded" alt="News Image">
           <div class="p-2 flex-grow-1">
             <h5 class="fw-bold">AI Digital Centre Unveils Gazan Students Robotics &Technology Project </h5>
             <p class="small">Qatar Museums has recently signed two memorandums of understanding (MoU) with the Capital Museum of China and with the National Museum of Mongolia. Both MoUs were signed by Sheikh Abdulaziz Al Thani, Director of National Museum o.</p>
