--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
       <div class="d-flex align-items-center justify-content-between flex-wrap">
         <!-- Logo -->
         <div class="logo-container d-flex align-items-center">
-          <a href="/" class="d-flex align-items-center text-decoration-none">
+          <a href="index.html" class="d-flex align-items-center text-decoration-none">
             <img class="logo-b" src="asset/imgs/logo.svg" alt="Qatar Museums Logo" height="50">
             <img class="logo-w" src="asset/imgs/logo-w.svg" alt="Qatar Museums Logo" height="50">
           </a>
@@ -243,7 +243,7 @@
           <li class="breadcrumb-item  text-color fw-semibold" aria-current="page">QM in the News</li>
         </ol>
       </nav>
-      <a href="#" class="btn btn-outline-dark d-flex ">
+      <a href="index.html" class="btn btn-outline-dark d-flex ">
         <i class="bi bi-arrow-left"></i>Back
       </a>
     </div>
