--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
-  <!-- <section class="canvas">
+  <section class="canvas">
     <a id="startbtn" class="btn bg-main bg-main-hover text-white " href="#">
       <i class="bi bi-balloon-fill"></i>
 
@@ -45,7 +45,7 @@
               </span>
           </h1>
         <button id="closeButton" aria-label="closeButton"><i class="bi bi-x-circle"></i></button>
-  </section> -->
+  </section>
 
   <!-- Header with Navigation -->
   <header class="py-2 border-bottom ">
@@ -891,301 +891,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <!-- <script src="asset/js/canvas.js"></script> -->
-<script src="asset/js/vertical-carousel.js"></script>
-
-
-  <!-- color changer -->
-  <script>
-    const colorCircles = document.querySelectorAll('.color-circle');
-
-    function updateSelectedColor(element) {
-      // Remove 'selected' from all
-      colorCircles.forEach(c => c.classList.remove('selected'));
-      element.classList.add('selected');
-
-      // Get color value and apply it
-      const selectedColor = getComputedStyle(document.documentElement)
-        .getPropertyValue(element.dataset.color);
-      document.documentElement.style.setProperty('--main-color', selectedColor);
-
-      // Save color key to localStorage
-      localStorage.setItem('selectedColorKey', element.dataset.color);
-    }
-
-    // Apply saved color on load
-    window.addEventListener('DOMContentLoaded', () => {
-      const savedColorKey = localStorage.getItem('selectedColorKey');
-      if (savedColorKey) {
-        const savedColorElement = [...colorCircles].find(c => c.dataset.color === savedColorKey);
-        if (savedColorElement) updateSelectedColor(savedColorElement);
-      } else {
-        const defaultColor = document.querySelector('.color-circle.bg-pink');
-        if (defaultColor) updateSelectedColor(defaultColor);
-      }
-    });
-
-    colorCircles.forEach(circle => {
-      circle.addEventListener('click', () => updateSelectedColor(circle));
-    });
-  </script>
-  <!-- Theme changer -->
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const lightOption = document.getElementById('lightOption');
-      const darkOption = document.getElementById('darkOption');
-
-      function activateLightTheme() {
-        document.documentElement.classList.remove('dark-theme');
-        lightOption.classList.add('selected');
-        darkOption.classList.remove('selected');
-        localStorage.setItem('theme', 'light');
-      }
-
-      function activateDarkTheme() {
-        document.documentElement.classList.add('dark-theme');
-        darkOption.classList.add('selected');
-        lightOption.classList.remove('selected');
-        localStorage.setItem('theme', 'dark');
-      }
-
-      lightOption.addEventListener('click', activateLightTheme);
-      darkOption.addEventListener('click', activateDarkTheme);
-
-      // Apply saved theme on load
-      const savedTheme = localStorage.getItem('theme');
-      if (savedTheme === 'dark') {
-        activateDarkTheme();
-      } else {
-        activateLightTheme();
-      }
-    });
-  </script>
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const themeBtn = document.getElementById('themeBtn');
-      const themeDropdown = document.getElementById('themeDropdown');
-
-      themeBtn.addEventListener('click', (e) => {
-        e.stopPropagation();
-        themeDropdown.classList.toggle('show');
-      });
-
-      document.addEventListener('click', (e) => {
-        if (!themeDropdown.contains(e.target) && !themeBtn.contains(e.target)) {
-          themeDropdown.classList.remove('show');
-        }
-      });
-
-      const themeCloseBtn = document.querySelector('#themeDropdown .btn-outline-secondary');
-      if (themeCloseBtn) {
-        themeCloseBtn.addEventListener('click', () => {
-          themeDropdown.classList.remove('show');
-        });
-      }
-    });
-  </script>
-  <!-- menu -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const toggleBtn = document.getElementById('menuToggle');
-      const menu = document.getElementById('mainMenu');
-
-      toggleBtn.addEventListener('click', () => {
-        menu.classList.toggle('active');
-      });
-
-      const closeBtn = document.getElementById('closeMenuBtn');
-      if (closeBtn) {
-        closeBtn.addEventListener('click', () => {
-          menu.classList.remove('active');
-        });
-      }
-
-      document.addEventListener('click', (e) => {
-        if (!menu.contains(e.target) && !toggleBtn.contains(e.target)) {
-          menu.classList.remove('active');
-        }
-      });
-    });
-  </script>
-
-  <!-- whats on  events -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const weekContainer = document.getElementById('weekDaysContainer');
-      const monthLabel = document.getElementById('calendarMonthLabel');
-      const prevBtn = document.getElementById('prevWeekBtn');
-      const nextBtn = document.getElementById('nextWeekBtn');
-
-      let currentDate = new Date();
-
-      function getStartOfWeek(date) {
-        const day = date.getDay();
-        return new Date(date.setDate(date.getDate() - day));
-      }
-
-      function renderWeek(date) {
-        const start = getStartOfWeek(new Date(date));
-        const dayNames = ['SUN', 'MON', 'TUE', 'WED', 'THU', 'FRI', 'SAT'];
-        weekContainer.innerHTML = '';
-
-        monthLabel.textContent = start.toLocaleDateString('en-US', { month: 'long', year: 'numeric' });
-
-        for (let i = 0; i < 7; i++) {
-          const day = new Date(start);
-          day.setDate(start.getDate() + i);
-
-          const dayBlock = document.createElement('div');
-          dayBlock.className = 'cursor-pointer';
-          const isToday = new Date().toDateString() === day.toDateString();
-
-          dayBlock.innerHTML = `
-        <div class="fw-bold small">${dayNames[i]}</div>
-        <div class="fw-semibold px-2 py-1 rounded ${isToday ? 'bg-main text-white' : ''}">
-          ${day.getDate()}
-        </div>
-      `;
-          weekContainer.appendChild(dayBlock);
-        }
-      }
-
-      prevBtn.addEventListener('click', () => {
-        currentDate.setDate(currentDate.getDate() - 7);
-        renderWeek(currentDate);
-      });
-
-      nextBtn.addEventListener('click', () => {
-        currentDate.setDate(currentDate.getDate() + 7);
-        renderWeek(currentDate);
-      });
-
-      renderWeek(currentDate);
-    });
-  </script>
-  <!--  pre regester events -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const weekContainer2 = document.getElementById('weekDaysContainer2');
-      const monthLabel2 = document.getElementById('calendarMonthLabel2');
-      const prevBtn2 = document.getElementById('prevWeekBtn2');
-      const nextBtn2 = document.getElementById('nextWeekBtn2');
-
-      let currentDate2 = new Date();
-
-      function getStartOfWeek(date) {
-        const day = date.getDay();
-        return new Date(date.setDate(date.getDate() - day));
-      }
-
-      function renderWeek2(date) {
-        const start = getStartOfWeek(new Date(date));
-        const dayNames = ['SUN', 'MON', 'TUE', 'WED', 'THU', 'FRI', 'SAT'];
-        weekContainer2.innerHTML = '';
-
-        monthLabel2.textContent = start.toLocaleDateString('en-US', { month: 'long', year: 'numeric' });
-
-        for (let i = 0; i < 7; i++) {
-          const day = new Date(start);
-          day.setDate(start.getDate() + i);
-
-          const dayBlock = document.createElement('div');
-          dayBlock.className = 'cursor-pointer';
-          const isToday = new Date().toDateString() === day.toDateString();
-
-          dayBlock.innerHTML = `
-        <div class="fw-bold small">${dayNames[i]}</div>
-        <div class="fw-semibold px-2 py-1 rounded ${isToday ? 'bg-main text-white' : ''}">
-          ${day.getDate()}
-        </div>
-      `;
-          weekContainer2.appendChild(dayBlock);
-        }
-      }
-
-      prevBtn2.addEventListener('click', () => {
-        currentDate2.setDate(currentDate2.getDate() - 7);
-        renderWeek2(currentDate2);
-      });
-
-      nextBtn2.addEventListener('click', () => {
-        currentDate2.setDate(currentDate2.getDate() + 7);
-        renderWeek2(currentDate2);
-      });
-
-      renderWeek2(currentDate2);
-    });
-//   </script>
-//   <script>
-//     // const canvas = document.querySelector('.canvas');
-// const body = document.body;
-
-// const observer = new MutationObserver(() => {
-//   if (getComputedStyle(canvas).display === 'block') {
-//     body.classList.add('canvas-visible');
-//   } else {
-//     body.classList.remove('canvas-visible');
-//   }
-// });
-
-// observer.observe(canvas, { attributes: true, attributeFilter: ['style'] });
-//   </script>
-
-  <script>
-    document.addEventListener('keydown', function (e) {
-      if (e.key === "Tab") {
-        document.querySelector('.skip-link').style.top = "10px"; // عرض الرابط عند التفاعل مع Tab
-      }
-    });
-
-    document.getElementById("currentYear").textContent = new Date().getFullYear();
-  </script>
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const inner = document.querySelector('.vertical-carousel-inner');
-    const items = document.querySelectorAll('.vertical-carousel-item');
-    const dots = document.querySelectorAll('.vertical-carousel-dots button');
-
-    let currentSlide = 0;
- 
-    function goToSlide(index) {
-      if (index < 0) index = items.length - 1;
-      if (index >= items.length) index = 0;
-      currentSlide = index;
- 
-      dots.forEach(d => d.classList.remove('active'));
-      dots[index].classList.add('active');
- 
-      const translateY = -index * 100;
-      inner.style.transform = `translateY(${translateY}%)`;
-    }
- 
-    dots.forEach((dot, index) => {
-      dot.addEventListener('click', () => {
-        goToSlide(index);
-      });
-    });
- 
-    items.forEach((item, index) => {
-      item.addEventListener('click', () => {
-        goToSlide(currentSlide + 1);
-      });
-    });
- 
-    // Add arrow button click handlers
-    const upArrow = document.querySelector('.carousel-arrow-up');
-    const downArrow = document.querySelector('.carousel-arrow-down');
-
-    upArrow.addEventListener('click', () => {
-      goToSlide(currentSlide - 1);
-    });
-
-    downArrow.addEventListener('click', () => {
-      goToSlide(currentSlide + 1);
-    });
-
-    goToSlide(0);
-  });
-</script>
-
+  <script src="asset/js/vertical-carousel.js"></script>
+  <script src="asset/js/main.js"></script>
+  <script src="asset/js/canvas.js"></script>
 </html>
