news details page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
-  <section class="canvas">
+  <!-- <section class="canvas">
     <a id="startbtn" class="btn bg-main bg-main-hover text-white " href="#">
       <i class="bi bi-balloon-fill"></i>
 
@@ -45,7 +45,7 @@
               </span>
           </h1>
         <button id="closeButton" aria-label="closeButton"><i class="bi bi-x-circle"></i></button>
-  </section>
+  </section> -->
 
   <!-- Header with Navigation -->
   <header class="py-2 border-bottom ">
@@ -239,7 +239,7 @@
                   <section class="card card-color p-3 mt-3">
                     <div class="news-hero ">
                         <!-- Main featured news item -->
-                        <a href="#" class="news-hero-main news-overlay">
+                        <a href="news details.html" class="news-hero-main news-overlay">
                             <img src="https://i.pinimg.com/736x/8d/77/a4/8d77a40abbec0695c3b384a0109ceb31.jpg" alt="AI Digital Centre Unveils Gazan Students Robotics & Technology Project">
                             <div class="news-hero-caption">
                                 <h2>AI Digital Centre Unveils Gazan Students Robotics & Technology Project</h2>
@@ -257,7 +257,7 @@
             <div  class="news-hero-item news-overlay d-block">
               <img src="https://i.pinimg.com/736x/27/d9/b4/27d9b4f2fe1f7f2651070f3cd9ce97b1.jpg" alt="Headline 1">
               <div class="news-hero-caption">
-                <a href="#" class="text-decoration-none text-white main-color-hover">  <h2>Headline 1</h2></a>
+                <a href="news details.html" class="text-decoration-none text-white main-color-hover">  <h2>Headline 1</h2></a>
               </div>
             </div>
           </div>
@@ -893,5 +893,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="asset/js/vertical-carousel.js"></script>
   <script src="asset/js/main.js"></script>
-  <script src="asset/js/canvas.js"></script>
+  <!-- <script src="asset/js/canvas.js"></script> -->
 </html>
