--- a/news.html
+++ b/news.html
@@ -185,7 +185,7 @@
     <section class="card card-color p-3 mt-3">
       <div class="news-hero ">
           <!-- Main featured news item -->
-          <a href="#" class="news-hero-main news-overlay">
+          <a href="news details.html" class="news-hero-main news-overlay">
               <img src="https://i.pinimg.com/736x/8d/77/a4/8d77a40abbec0695c3b384a0109ceb31.jpg" alt="AI Digital Centre Unveils Gazan Students Robotics">
               <div class="news-hero-caption">
                   <h2>AI Digital Centre Unveils Gazan Students Robotics & Technology Project</h2>
