--- a/news.html
+++ b/news.html
@@ -511,5 +511,9 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="asset/js/vertical-carousel.js"></script>
   <script src="asset/js/main.js"></script>
+  <script>
+    flatpickr(".form-control[aria-label='From Date']", {});
+    flatpickr(".form-control[aria-label='To Date']", {});
+  </script>
 </body>
 </html>
